[package]
name = "interpreter-rs"
version = "0.1.0"
authors = ["peter"]
edition = "2024"
rust-version = "1.91"

[[bin]]
name = "interpreter-rs"
path = "src/main.rs"

[lib]
name = "lox_interpreter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"                                
bytes = "1.3.0"                                  
thiserror = "1.0.38"                             

