[package]
name = "interpreter"
version = "0.1.0"
authors = ["peter"]
edition = "2024"
rust-version = "1.91"

[[bin]]
name = "interpreter"
path = "src/main.rs"


[[bin]]
name = "scratch"
path = "src/scratch.rs"

[lib]
name = "lox_interpreter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"

